--- a/src/app/features/sidebar/sidebar.component.html
+++ b/src/app/features/sidebar/sidebar.component.html
@@ -17,7 +17,11 @@
   <div class="pl-5">
     <div class="col-start-1 pt-3"><span class="font-medium">Components</span></div>
     <div class="pt-1">
-      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item" (click)="showItems('user')">
+      <div
+        class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 cursor-pointer component_row_hover"
+        [ngClass]="{ component_row: isUserDetail && isComponentUserHoover }"
+        (click)="showItems('userDetail')"
+      >
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/userSVG.svg" width="30" height="30" class="" alt="" />
           <span class="font-normal text-sm w-full">User</span>
@@ -37,17 +41,20 @@
       </div>
 
       @if (isUserDetail) {
-        <div>
-          <ul class="d text-sm">
-            <li><span>into amazing</span></li>
-            <li><span>into amazing</span></li>
-            <li><span>into amazing</span></li>
-            <li><span>into amazing</span></li>
-          </ul>
-        </div>
+        <ul class="d text-sm">
+          @for (detail of userDatailList; track $index) {
+            <li class="li-details mt-1 w-64 rounded" [ngClass]="{ ff: detail.id == idFor && isComponentUserHoover}" (click)="id($index + 1)">
+              <span>{{ detail.text }}</span>
+            </li>
+          }
+        </ul>
       }
 
-      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 h-7 rounded mt-1 hoover_item">
+      <div
+        class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 cursor-pointer component_row_hover"
+        [ngClass]="{ component_row: isInquiryDetail }"
+        (click)="showItems('inquiryDetail')"
+      >
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/questionnaire.svg" width="21" height="25" class="" alt="" />
           <span class="font-normal text-sm w-full">Inquires</span>
@@ -65,39 +72,50 @@
           <polyline points="6 9 12 15 18 9" />
         </svg>
       </div>
+
+      @if (isInquiryDetail) {
+        <ul class="d text-sm">
+          @for (detail of inquiryDetailList; track $index) {
+            <li class="li-details mt-1 w-64 rounded" [ngClass]="{ ff: detail.id == idFor && isComponentInquiryHoover }" (click)="id($index + 1)">
+              <span>{{ detail.text }}</span>
+            </li>
+          }
+        </ul>
+      }
+
       <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item">
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/tables.svg" width="22" height="30" class="" alt="" />
           <span class="font-normal text-sm w-full">Tables</span>
         </div>
-          <svg
-            class="h-6 w-4 pt-1 text-black"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <polyline points="6 9 12 15 18 9" />
-          </svg>
+        <svg
+          class="h-6 w-4 pt-1 text-black"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <polyline points="6 9 12 15 18 9" />
+        </svg>
       </div>
       <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item">
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/charts.svg" width="22" height="30" class="" alt="" />
           <span class="font-normal text-sm w-full">Charts</span>
         </div>
-          <svg
-            class="h-6 w-4 pt-1 text-black"
-            viewBox="0 0 24 24"
-            fill="none"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <polyline points="6 9 12 15 18 9" />
-          </svg>
+        <svg
+          class="h-6 w-4 pt-1 text-black"
+          viewBox="0 0 24 24"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <polyline points="6 9 12 15 18 9" />
+        </svg>
       </div>
     </div>
   </div>
