--- a/src/app/features/sidebar/sidebar.component.css
+++ b/src/app/features/sidebar/sidebar.component.css
@@ -30,21 +30,21 @@
     font-weight: 700;
 }
 
-.d {
+ul {
     overflow: hidden;
     white-space: nowrap;
     cursor: pointer;
 }
 
-.d li :first-of-type {
+ul li :first-of-type {
     animation: slidein 700ms normal;
 }
 
-.d li:last-of-type {
+ul li:last-of-type {
     animation: slidein 1s normal;
 }
 
-.d li {
+ul li {
     margin-left: 25px;
     padding-left: 4px;
     animation: slidein 1s normal;
@@ -53,30 +53,30 @@
     width: 195px;
 }
 
-.d li:nth-child(1) {
+ul li:nth-child(1) {
     animation-delay: 100ms;
     animation-duration: 1s;
 }
 
-.d li:nth-child(2) {
+ul li:nth-child(2) {
     animation-delay: 200ms;
     animation-duration: 1s;
 }
 
-.d li:nth-child(3) {
+ul li:nth-child(3) {
     animation-delay: 300ms;
     animation-duration: 1s;
 }
 
-.d li:nth-child(4) {
+ul li:nth-child(4) {
     animation-delay: 400ms;
     animation-duration: 1s;
 }
 
-.li_hover:hover {
+ul .li_hover:hover {
     background-color: rgb(218, 217, 217);
     font-weight: 500;
-    width: fit-content;
+    width: 195px;
 }
 
 .li_details {
