--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -13,6 +13,7 @@
         height="60"
         class="justify-between"
         alt=""
+        (click)="openSidebar.next(true)"
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
