--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,13 @@
   
 </div> -->
 
-
 <header><inq-inquiry-header (openSidebar)="getSidenavEvent($event)"></inq-inquiry-header></header>
-<inq-sidebar  [ngClass]="{ sidebar: isSidebar }"></inq-sidebar>
+
+<section class="sidebar_container">
+  @if (isSidebar) {
+    <div [ngClass]="{ sidebar_show: isSidebar }"><inq-sidebar></inq-sidebar></div>
+  }
+  @if (!isSidebar) {
+    <div class="sidebar_hide"><inq-sidebar></inq-sidebar></div>
+  }
+</section>
