--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -1,27 +1,34 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300');
 
+
+
+  .placeholder-style::placeholder {
+     text-align: center;
+     color: #9CA3AF;
+  }
+
 .container {
-  /* background-size: 100%;
-  z-index: -1;
-  */
   margin: 0;
   padding: 0;
+  width: 380px;
+  height: 520px;
+  padding-top: 30%;
+}
+
+mat-card {
   width: 100%;
   height: 100%;
-  background-color: darkgray;
+  background: rgb(255,255,255);
+  border-radius: 15px;
+background: linear-gradient(37deg, rgba(255,255,255,1) 8%, rgba(238,238,241,1) 17%, rgba(217,217,220,1) 75%); 
+box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
-
-.center {
-  padding: 10vw;
-  display: flex;
-  justify-content: center;
-}
-
 .settingPageCard {
-  width: 350px;
-  height: 400px;
-  box-shadow: #9fa6cf 0px 0px 4px 4px;
+  width: 450px;
+  height: 600px;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
+  /* box-shadow: #DEE2E6 0px 0px 4px 4px; */
 }
 
 .hightDiv {
@@ -36,11 +43,11 @@
 }
 
 .cardImage {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   margin-top: 30px;
   margin-left: 130px;
-  background-image: url('/assets/images/icons8-inquiry-96.png');
+  background-image: url('/assets/images/sign-in.svg');
 }
 
 .matFormDiv {
@@ -62,6 +69,9 @@
 }
 
 
+
+
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
   color: white;
 }
+
