--- a/src/app/features/sidebar/sidebar.component.html
+++ b/src/app/features/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="h-full w-64 bg-gray-200">
+<div class="h-full w-64 main_colour">
   <div class="pl-5">
     <div class="col-start-1 pt-3">
       <img
