--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,6 +20,8 @@
     animation: slidein 2s normal;
     visibility: inherit;
     height: 100%;
+    position: relative;
+    z-index: 1;
 }
 
 .sidebar_hide {
@@ -68,10 +70,17 @@
 
 .sidebar_container {
     height: 100%;
+   background: rgb(255,255,255);
+    background: linear-gradient(275deg, rgba(255,255,255,1) 19%, rgba(222,226,230,1) 73%);;
+    width: 100%;
 }
 
 .container{
     overflow: hidden;
     width: 100%;
     height: 100%;
+}
+
+.side_container{
+    width:200px
 }
