--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,19 @@
 
 <header><inq-inquiry-header (openSidebar)="getSidenavEvent($event)"></inq-inquiry-header></header>
 
-<section class="sidebar_container">
-  @if (isSidebar) {
-    <div [ngClass]="{ sidebar_show: isSidebar }"><inq-sidebar></inq-sidebar></div>
-  }
-  @if (!isSidebar) {
-    <div class="sidebar_hide"><inq-sidebar></inq-sidebar></div>
-  }
+<section class="sidebar_container flex flex-row justify-between">
+  <div class="col-2 flex flex-row">
+    <div class="side_container">
+      @if (isSidebar) {
+        <div [ngClass]="{ sidebar_show: isSidebar }"><inq-sidebar></inq-sidebar></div>
+      }
+      @if (!isSidebar) {
+        <div class="sidebar_hide"><inq-sidebar></inq-sidebar></div>
+      }
+    </div>
+   
+    
+  </div>
+  <div class="col-6 mr-36"> <inq-login ></inq-login></div>
+  <div class="col-end-4"></div>
 </section>
