--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300');
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,300");
 
-
-
-  .placeholder-style::placeholder {
-     text-align: center;
-     color: #9CA3AF;
-  }
+.placeholder-style::placeholder {
+  text-align: center;
+  color: #9ca3af;
+}
 
 .container {
   margin: 0;
@@ -19,10 +17,10 @@
 mat-card {
   width: 100%;
   height: 100%;
-  background: rgb(255,255,255);
+  background: rgb(255, 255, 255);
   border-radius: 15px;
-background: linear-gradient(37deg, rgba(255,255,255,1) 8%, rgba(238,238,241,1) 17%, rgba(217,217,220,1) 75%); 
-box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+  background: linear-gradient(37deg, rgba(255, 255, 255, 1) 8%, rgba(238, 238, 241, 1) 17%, rgba(217, 217, 220, 1) 75%);
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
 .settingPageCard {
   width: 450px;
@@ -38,8 +36,8 @@ box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 .title {
   text-align: center;
   margin-top: 30px;
-  color: #A2A6F2;
-  text-shadow: #A2A6F2 0px 0px 10px ;
+  color: #a2a6f2;
+  text-shadow: #a2a6f2 0px 0px 10px;
 }
 
 .cardImage {
@@ -47,7 +45,7 @@ box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   height: 50px;
   margin-top: 30px;
   margin-left: 130px;
-  background-image: url('/assets/images/sign-in.svg');
+  background-image: url("/assets/images/sign-in.svg");
 }
 
 .matFormDiv {
@@ -68,10 +66,6 @@ box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
   display: flex;
 }
 
-
-
-
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
   color: white;
 }
-
