--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -10,7 +10,7 @@
     <div><span class="flex justify-center text-2xl text-gray-400 font-extralight">Sign in</span></div>
 
     <div class="flex flex-row justify-center">
-      <form class="w-full max-w-sm flex flex-row justify-center">
+      <form [formGroup]="loginForm" class="w-full max-w-sm flex flex-row justify-center">
         <div class="justify-center-center py-2 justify-center">
           <div class="bordder-b border-gray-200 mt-2 mb-2">
             <input
@@ -18,6 +18,7 @@
               type="text"
               placeholder="Login"
               aria-label="Full name"
+              formControlName="login"
             />
           </div>
 
@@ -27,6 +28,7 @@
               type="text"
               placeholder="Password"
               aria-label="Full name"
+              formControlName="password"
             />
           </div>
         </div>
@@ -35,6 +37,7 @@
     <div class="flex row justify-end mt-16">
       <div class="flex pt-4 justify-center mt-22">
         <button
+        (click)="signIn()"
           class="flex-shrink-0 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 text-sm border-4 text-white py-1 px-2 rounded"
           type="button"
         >
