--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -1,9 +1,5 @@
 <div class="container">
   <mat-card class="">
-    <div class="flex justify-center">
-      <!-- <img src="../assets/images/inquary_app.svg" width="150" height="27" class="flex flex-row justify-center mt-4" alt="" /> -->
-    </div>
-
     <div class="flex justify-center pt-10">
       <img src="../assets/images/sign-in2.svg" width="150" height="60" class="" alt="" />
     </div>
@@ -37,16 +33,13 @@
     <div class="flex row justify-end mt-16">
       <div class="flex pt-4 justify-center mt-22">
         <button
-        (click)="signIn()"
+          (click)="signIn()"
           class="flex-shrink-0 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 text-sm border-4 text-white py-1 px-2 rounded"
           type="button"
         >
           Sign in
         </button>
-        <button
-          class="flex-shrink-0 border-transparent border-4 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded"
-          type="button"
-        >
+        <button class="flex-shrink-0 border-transparent border-4 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded" type="button">
           Cancel
         </button>
       </div>
