--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -8,13 +8,14 @@
     <div class="flex flex-row justify-center">
       <form [formGroup]="loginForm" class="w-full max-w-sm flex flex-row justify-center">
         <div class="justify-center-center py-2 justify-center">
-          <div class="bordder-b border-gray-200 mt-2 mb-2">
+          <div class="mt-2 mb-2">
             <input
               class="placeholder-style appearance-none bg-transparent border-b w-48 mr-3 py-1 px-2 leading-tight focus:outline-none border-stone-300 text-gray-400 font-extralight text-center"
               type="text"
               placeholder="Login"
               aria-label="Full name"
               formControlName="login"
+              id="15"
             />
           </div>
 
@@ -30,19 +31,16 @@
         </div>
       </form>
     </div>
-    <div class="flex row justify-end mt-16">
-      <div class="flex pt-4 justify-center mt-22">
+      <div class="flex pt-4 justify-center mt-22 col-6">
         <button
           (click)="signIn()"
-          class="flex-shrink-0 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 text-sm border-4 text-white py-1 px-2 rounded"
+          class="flex-shrink-0 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 text-sm border-4 text-white py-1 rounded w-48"
           type="button"
         >
           Sign in
         </button>
-        <button class="flex-shrink-0 border-transparent border-4 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded" type="button">
-          Cancel
-        </button>
+        
       </div>
-    </div>
+      <div><span class="flex justify-center text-sm text-gray-400 font-extralight mt-4">Don't have an account yet? <span class="text-fuchsia-700 ml-2">Sign up.</span></span></div>
   </mat-card>
 </div>
