--- a/src/app/features/shared-components/login/login.component.html
+++ b/src/app/features/shared-components/login/login.component.html
@@ -10,18 +10,16 @@
         <div class="justify-center-center py-2 justify-center">
           <div class="mt-2 mb-2">
             <input
-              class="placeholder-style appearance-none bg-transparent border-b w-48 mr-3 py-1 px-2 leading-tight focus:outline-none border-stone-300 text-gray-400 font-extralight text-center"
-              type="text"
+            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
               placeholder="Login"
               aria-label="Full name"
               formControlName="login"
-              id="15"
             />
           </div>
 
           <div class="bordder-b border-gray-200 mt-2 mb-2">
             <input
-              class="placeholder-style appearance-none bg-transparent border-b w-48 text-gray-400 mr-3 py-1 px-2 leading-tight focus:outline-none border-stone-300 font-extralight text-center"
+            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
               type="text"
               placeholder="Password"
               aria-label="Full name"
