add register component to main html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
    
     
   </div>
-  <div class="col-6 mr-36"> <inq-login ></inq-login></div>
+  <!-- <div class="col-6 mr-36"> <inq-login ></inq-login></div> -->
+   <inq-register class="flex items-center"></inq-register>
   <div class="col-end-4"></div>
 </section>
