--- a/src/app/features/shared-components/register/register.component.html
+++ b/src/app/features/shared-components/register/register.component.html
@@ -1,91 +1,95 @@
 <mat-card class="container">
   <div class="mt-5 mb-5">
-  <div class="flex justify-center">
-    <img src="../assets/images/register.svg" width="50" height="40" class="" alt="" />
-  </div>
-  <div><span class="flex justify-center text-2xl text-gray-400 font-extralight">Register</span></div>
+    <div class="flex justify-center">
+      <img src="../assets/images/register.svg" width="50" height="40" class="" alt="" />
+    </div>
+    <div><span class="flex justify-center text-2xl text-gray-400 font-extralight">Register</span></div>
 
-  <div class="flex flex-row justify-center">
-    <form [formGroup]="registerForm"  class="w-full max-w-sm flex flex-row justify-center">
-      <div class="justify-center">
-        <div class="mt-2 mb-2 flex justify-center text-black">
-          <label>
+    <div class="flex flex-row justify-center">
+      <form [formGroup]="registerForm" class="w-full max-w-sm flex flex-row justify-center novalidate" id="form">
+        <div class="justify-center">
+          <div class="mt-2 mb-2 flex justify-center">
+            <label>
+              <input
+                class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+                type="text"
+                placeholder="Login name *"
+                aria-label="Login name"
+                formControlName="{{ registerFormName.USERNAME }}"
+              />
+            </label>
+          </div>
+
+          <div class="mt-2 mb-2">
             <input
-              class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-black font-normal text-center bg-stone-200 rounded-md h-8 ... invalid:[&:not(:placeholder-shown):not(:focus)]:border-red-500"
-              type="text"
-              placeholder="Login name *"
-              aria-label="Login name"
-              formControlName="{{ registerFormName.USERNAME }}"
-              required=""
+              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              type="email"
+              placeholder="Email address *"
+              aria-label="Full name"
+              name="email"
+              required
             />
-            <span class="mt-2 hidden text-sm text-red-500 peer-[&:not(:placeholder-shown):not(:focus):invalid]:block">
-              Please enter a valid login address
-            </span>
-          </label>
-        </div>
+            <abbr title="Email pattern not valid"></abbr>
+            <span class="mt-2 hidden text-sm text-red-500" > Please enter a valid email address </span>
+          </div>
 
-        <div class="mt-2 mb-2 flex justify-center">
-          <input
-            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 font-normal text-gray-400 text-center bg-stone-200 rounded-md h-8"
-            type="text"
-            placeholder="Email address *"
-            aria-label="Full name"
-            formControlName="{{registerFormName.EMAIL}}"
-          />
-        </div>
-        <div class="mt-2 mb-2 flex justify-center">
-          <input
-            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
-            type="text"
-            placeholder="Password *"
-            aria-label="password"
-            formControlName="password"
-          />
-        </div>
-        <div class="mt-2 mb-2 flex justify-center">
-          <input
-            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
-            type="text"
-            placeholder="Confirm Password *"
-            aria-label="Confirm Password"
-            formControlName="password"
-          />
-        </div>
-        <div class="mt-2 mb-2 flex justify-center">
           <div class="mt-2 mb-2 flex justify-center">
             <input
-              class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
+              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              placeholder="Password *"
+              type="password"
+              formControlName="{{ registerFormName.PASSWORD }}"
+            />
+          </div>
+
+          <div class="mt-2 mb-2 flex justify-center">
+            <input
+              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
               type="text"
-              placeholder="First name"
-              aria-label="First name"
-              formControlName="password"
+              placeholder="Confirm Password *"
+              aria-label="Confirm Password"
+              formControlName="{{ registerFormName.PASSWORD_CONFIRMED }}"
+            />
+          </div>
+
+          <div class="mt-2 mb-2 flex justify-center">
+            <div class="mt-2 mb-2 flex justify-center">
+              <input
+                class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+                type="text"
+                placeholder="First name"
+                aria-label="First name"
+                formControlName="{{ registerFormName.FIRST_NAME }}"
+              />
+            </div>
+          </div>
+
+          <div class="mt-2 mb-2 flex justify-center">
+            <input
+              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              type="text"
+              placeholder="Last name"
+              aria-label="Last name"
+              formControlName="{{ registerFormName.LAST_NAME }}"
             />
           </div>
         </div>
-        <div class="mt-2 mb-2 flex justify-center">
-          <input
-            class="placeholder-style w-48 leading-tight focus:outline-none border-stone-300 text-gray-400 font-normal text-center bg-stone-200 rounded-md h-8"
-            type="text"
-            placeholder="Last name"
-            aria-label="Last name"
-            formControlName="password"
-          />
-        </div>
-      </div>
-    </form>
+      </form>
+    </div>
+    <div class="mt-2 mb-2 flex justify-center">
+      <button
+        class="h-8 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500  border-4 text-white rounded w-48 cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
+        type="submit"
+        (click)="register()"
+        [disabled]="!registerForm.valid"
+      >
+        Register
+      </button>
+    </div>
+    <div class="flex justify-center">
+      <button class="flex-shrink-0 w-48 bg-transparent h-8 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded hover:text-sm hover:h-8 hover:border-2 hover:border-gray-500" type="button">
+        <span>Back to home page</span>
+      </button>
+    </div>
   </div>
-  <div class="mt-2 mb-2 flex justify-center">
-    <button
-      class="flex-shrink-0 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 text-sm border-4 text-white py-1 rounded w-48"
-      type="button"
-    >
-      Register
-    </button>
-  </div>
-  <div class="flex justify-center">
-    <button class="flex-shrink-0 w-48 bg-stone-200 border-4 text-teal-500 hover:text-teal-800 text-sm py-1 px-2 rounded" type="button">
-      <span>Back to home page</span>
-    </button>
-  </div>
-</div>
 </mat-card>
