--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-<!-- <div class="container">
-  <header><inq-inquiry-header></inq-inquiry-header></header>
-  
-  <section class="main-content">
-    <inq-sidebar></inq-sidebar>
-    <router-outlet></router-outlet>
-
-  </section>
-  
-</div> -->
-
 <header><inq-inquiry-header (openSidebar)="getSidenavEvent($event)"></inq-inquiry-header></header>
 
 <section class="sidebar_container flex flex-row justify-between">
@@ -21,10 +10,7 @@
         <div class="sidebar_hide"><inq-sidebar></inq-sidebar></div>
       }
     </div>
-   
-    
   </div>
-  <!-- <div class="col-6 mr-36"> <inq-login ></inq-login></div> -->
-   <inq-register class="flex items-center"></inq-register>
+   <inq-register class="col-6 mr-36  flex items-center"></inq-register>
   <div class="col-end-4"></div>
 </section>
