--- a/src/app/features/shared-components/register/register.component.css
+++ b/src/app/features/shared-components/register/register.component.css
@@ -20,6 +20,20 @@
   margin-bottom: 48%;
 }
 
+abbr[title]:hover::before {
+  background: rgb(2, 2, 2); /* Fallback color */
+  background: rgba(255, 255, 255, 0.4); /* Black background with 0.5 opacity */
+  border-radius: 6px;
+  bottom: -6x;
+  content: "Length: 8-20 | 1 - [!@#$ ...] | 1 - [0-9] | 1 - [a-z] | 1 - [A-Z]";
+  display: block;
+  left: 130%;
+  padding: 5px;
+  position: absolute;    
+  width: 480px;
+  z-index: 1;
+}
+
 mat-card {
   width: 100%;
   height: 100%;
@@ -28,11 +42,10 @@ mat-card {
   background: linear-gradient(312deg, rgba(255, 255, 255, 1) 8%, rgba(238, 238, 241, 1) 17%, rgba(217, 217, 220, 1) 75%);
   box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
+
 .settingPageCard {
   width: 450px;
   height: 600px;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px; */
-  /* box-shadow: #DEE2E6 0px 0px 4px 4px; */
 }
 
 .hightDiv {
@@ -71,33 +84,42 @@ abbr {
   position: relative
 }
 
-abbr:after {
+.tooltip:after {
   background: #ffabab;
+  display: inline-block;
   border-radius: 6px;
-  content: attr(title);
-  display: block;
-  left: 100%;
-  text-align: center;
-  bottom: -10px;
-  padding: 9px;
-  position: absolute;    
+  left: 31%;
+  position: fixed;
   width: 280px;
-  margin-left: 10px;
-  z-index: 1;
-  height: 40px;
+  height: 35px;
   animation: 2s slidein;
+  content: attr(title);
+}
+
+.tooltip3:after {
+  display: flex;
+  left: 34%;
+  position:fixed;    
+  text-align: center;
+  align-items: center;
+  align-content: center;
+  z-index: 1;
+  height: 35px;
+  animation: 2s slidein;
+  content: attr(title);
+  width: 280px;
 }
 
 @keyframes slidein {
   0% {
-      margin-left: 800px;
+      top: -100px;
   }
   20% {
-      margin-left: 800px;
+      top: -50px;
   }
 
   100% {
-      margin-left: 10px;
+      top:389px;
   }
 }
 
