--- a/src/app/features/shared-components/register/register.component.html
+++ b/src/app/features/shared-components/register/register.component.html
@@ -8,9 +8,9 @@
     <div class="flex flex-row justify-center">
       <form [formGroup]="registerForm" class="w-full max-w-sm flex flex-row justify-center novalidate" id="form">
         <div class="justify-center">
-          <div class="mt-2 mb-2 flex justify-center">
+          <div class="mt-3 mb-3 flex justify-center">
             <input
-              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="text"
               placeholder="Login name *"
               aria-label="Login name"
@@ -21,62 +21,63 @@
             } -->
           </div>
 
-          <div class="mt-2 mb-2 flex justify-center">
+          <div class="mt-3 mb-3 flex justify-center items-center">
             <input
-              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="email"
               placeholder="Email address *"
               aria-label="Full name"
               name="email"
+              formControlName="{{registerFormName.EMAIL}}"
               required
             />
           </div>
 
-          <div class="mt-2 mb-2 flex justify-center ml-6 pt-1">
+          <div class="mt-3 mb-3 flex flex-row justify-center ml-7  items-center">
+            
             <input
-              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               placeholder="Password *"
-              type="password"
+              type="text"
               formControlName="{{ registerFormName.PASSWORD }}"
             />
-            
-            <abbr class="flex items-center opacity-10 h-4" title=""
-              ><img src="../assets/images/info.svg" width="20" height="20" class="ml-1" alt=""
-              /></abbr>
-            <abbr class="flex items-center" title="Pattern"
-            ></abbr>
             @if (isPasswordValid) {
-                <div class="tooltip" style="opacity: 0.3"></div>
-               <div class="tooltip3 text-center" title="Email pattern not valid"></div>
-                
-            }
+            <div class="flex flex-row mb-8 text-center">
+              <div class="tooltip" title="Email pattern not valid"></div>
+            </div>
+              
+          }
+            <abbr class="flex items-center h-4 pl-2" title=""
+              ><img src="../assets/images/info.svg" width="20" height="20" class="" alt=""
+              /></abbr>
           </div>
 
-          <div class="mt-2 mb-2 flex justify-center">
+          <div class="mt-3 mb-3 flex flex-row justify-center ml-7  items-center">
             <input
-              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="text"
               placeholder="Confirm Password *"
               aria-label="Confirm Password"
               formControlName="{{ registerFormName.PASSWORD_CONFIRMED }}"
             />
+            <abbr class="flex items-center h-4 pl-2" title=""
+              ><img src="../assets/images/info.svg" width="20" height="20" class="" alt=""
+              /></abbr>
           </div>
 
-          <div class="mt-2 mb-2 flex justify-center">
-            <div class="mt-2 mb-2 flex justify-center">
+          <div class="mt-3 mb-3 flex justify-center">
               <input
-                class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+                class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
                 type="text"
                 placeholder="First name"
                 aria-label="First name"
                 formControlName="{{ registerFormName.FIRST_NAME }}"
               />
-            </div>
           </div>
 
-          <div class="mt-2 mb-2 flex justify-center">
+          <div class="mt-3 mb-3 flex justify-center">
             <input
-              class="placeholder-style border-2 w-48 leading-tight focus:outline-none border-gray-100 text-gray-400 font-normal text-center bg-gray-200 rounded-md h-8"
+              class="placeholder-style w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="text"
               placeholder="Last name"
               aria-label="Last name"
@@ -88,7 +89,7 @@
     </div>
     <div class="mt-2 mb-2 flex justify-center">
       <button
-        class="h-8 bg-gray-400 hover:bg-gray-500 border-gray-400 hover:border-gray-500 border-4 text-white rounded w-48 cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
+        class="h-8 bg-gray-600 hover:bg-gray-500 border-gray-400 hover:border-gray-500 border-4 text-white rounded w-48 cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
         type="submit"
         (click)="register()"
         [disabled]="!registerForm.valid"
