--- a/src/app/features/shared-components/register/register.component.html
+++ b/src/app/features/shared-components/register/register.component.html
@@ -10,74 +10,69 @@
         <div class="justify-center">
           <div class="mt-3 mb-3 flex justify-center">
             <input
-              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="text"
               placeholder="Login name *"
               aria-label="Login name"
               formControlName="{{ registerFormName.USERNAME }}"
             />
-            <!-- @if (isPasswordValid$ | async) {
-              <abbr title="Email pattern not valid"></abbr>
-            } -->
           </div>
 
           <div class="mt-3 mb-3 flex justify-center items-center">
             <input
-              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="email"
               placeholder="Email address *"
               aria-label="Full name"
               name="email"
-              formControlName="{{registerFormName.EMAIL}}"
+              formControlName="{{ registerFormName.EMAIL }}"
               required
             />
           </div>
 
-          <div class="mt-3 mb-3 flex flex-row justify-center ml-7  items-center">
-            
+          <div class="mt-3 mb-3 flex flex-row justify-center ml-7 items-center">
             <input
-              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               placeholder="Password *"
-              type="text"
+              type="password"
               formControlName="{{ registerFormName.PASSWORD }}"
             />
             @if (isPasswordValid) {
-            <div class="flex flex-row mb-8 text-center">
-              <div class="tooltip" title="Email pattern not valid"></div>
+              <div class="flex flex-row mb-8 text-center">
+                <div class="tooltip" title="Email pattern not valid"></div>
+              </div>
+            }
+            <div class="flex items-center h-4 pl-2 tooltip_password" title="">
+              <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
             </div>
-              
-          }
-            <abbr class="flex items-center h-4 pl-2" title=""
-              ><img src="../assets/images/info.svg" width="20" height="20" class="" alt=""
-              /></abbr>
           </div>
 
-          <div class="mt-3 mb-3 flex flex-row justify-center ml-7  items-center">
+          <div class="mt-3 mb-3 flex flex-row justify-center ml-7 items-center">
             <input
-              class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
-              type="text"
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              type="password"
               placeholder="Confirm Password *"
               aria-label="Confirm Password"
               formControlName="{{ registerFormName.PASSWORD_CONFIRMED }}"
             />
-            <abbr class="flex items-center h-4 pl-2" title=""
-              ><img src="../assets/images/info.svg" width="20" height="20" class="" alt=""
-              /></abbr>
-          </div>
-
-          <div class="mt-3 mb-3 flex justify-center">
-              <input
-                class="placeholder-style  w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
-                type="text"
-                placeholder="First name"
-                aria-label="First name"
-                formControlName="{{ registerFormName.FIRST_NAME }}"
-              />
+            <div class="flex items-center h-4 pl-2 tooltip_confirmed" title="">
+              <img src="../assets/images/info.svg" width="20" height="20" class="" alt="" />
+            </div>
           </div>
 
           <div class="mt-3 mb-3 flex justify-center">
             <input
-              class="placeholder-style w-48 leading-tight focus:outline-none border-gray-100 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
+              type="text"
+              placeholder="First name"
+              aria-label="First name"
+              formControlName="{{ registerFormName.FIRST_NAME }}"
+            />
+          </div>
+
+          <div class="mt-3 mb-3 flex justify-center">
+            <input
+              class="placeholder-style border-2 w-48 border-t border-b border-r border-l leading-tight focus:outline-none border-gray-400 text-white font-normal text-center bg-gray-500 rounded-md h-8"
               type="text"
               placeholder="Last name"
               aria-label="Last name"
@@ -89,10 +84,10 @@
     </div>
     <div class="mt-2 mb-2 flex justify-center">
       <button
-        class="h-8 bg-gray-600 hover:bg-gray-500 border-gray-400 hover:border-gray-500 border-4 text-white rounded w-48 cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
+        class="h-8 bg-gray-500 hover:bg-gray-600 rounded-md hover:border-gray-400 border-gray-400 border-4 w-48 border-t border-b border-r border-l leading-tight text-white cursor-pointer disabled:bg-gray-300 disabled:border-0 disabled:h-8 text-normal"
         type="submit"
         (click)="register()"
-        [disabled]="!registerForm.valid"
+        [disabled]="registerForm.invalid || registerForm.errors?.['passwordMatchError']"
       >
         Register
       </button>
