--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
       }
     </div>
   </div>
+  <!-- <inq-login></inq-login> -->
    <inq-register class="col-6 mr-36  flex items-center"></inq-register>
   <div class="col-end-4"></div>
 </section>
