--- a/src/app/features/inquiry-header/inquiry-header.component.html
+++ b/src/app/features/inquiry-header/inquiry-header.component.html
@@ -1,11 +1,6 @@
-<!-- <div class="container">
-  <div class="row">
-    
-  </div>
-</div> -->
 
-<div class="w-full h-15 header-shadow">
-  <div class="flex flex-row col justify-between ml-5 mr-5">
+
+  <div class="w-full h-16 header-shadow items-center justify-between flex flex-row pl-5 pr-5">
     <div class="flex flex-row col-start-3 gap-4">
       <img
         src="../assets/images/menu-svgrepo-com.svg"
@@ -28,28 +23,27 @@
     <div class="flex flex-row col-end-3">
       <img
         src="../assets/images/search.svg"
-        width="60"
-        height="50"
+        width="40"
+        height="40"
         class="mt-0.5"
         alt=""
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
         src="../assets/images/bell1.svg"
-        width="60"
-        height="60"
+        width="40"
+        height="40"
         class=""
         alt=""
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
       <img
         src="../assets/images/loginSVG.svg"
-        width="55"
-        height="55"
+        width="40"
+        height="40"
         class=""
         alt=""
         style="border-radius: 5px; cursor: pointer; padding-top: 3px"
       />
     </div>
   </div>
-</div>
