--- a/src/app/features/shared-components/register/register.component.css
+++ b/src/app/features/shared-components/register/register.component.css
@@ -21,8 +21,8 @@
 }
 
 mat-card {
-  width: 100%;
-  height: 100%;
+  width: 20%;
+  height: 460px;
   background: rgb(255, 255, 255);
   border-radius: 15px;
   background: linear-gradient(312deg, rgba(255, 255, 255, 1) 8%, rgba(238, 238, 241, 1) 17%, rgba(217, 217, 220, 1) 75%);
